# Flux

./: CMakeLists.txt  Doxyfile  ENGINEERING_SPEC.md  GEMINI.md  Proposal_v3.md  README.md  RELEASE_GUIDE.md  project.flux  resources.rc
docs/: ARCHITECTURE.md  AUDIO_ENGINE.md  FLUX_SDK_GUIDE.md  FX_IMPLEMENTATION.md  GRAPHICS_ENGINE.md  REPORT.aux  REPORT.out  REPORT.tex  REPORT.toc
docs/diagrams/: audio_flow.d2  subsystem_engine.d2  system_overview.d2
docs/doxygen/html/: analog__base_8hpp.html  analog__base_8hpp.js  analog__base_8hpp_source.html  analog__suite_8hpp.html  analog__suite_8hpp.js  analog__suite_8hpp_source.html  annotated.html  annotated_dup.js  application__base_8cpp.html  application__base_8hpp.html  application__base_8hpp.js  application__base_8hpp_source.html  asset__manager_8cpp.html  asset__manager_8hpp.html  asset__manager_8hpp.js  asset__manager_8hpp_source.html  audio__buffer_8hpp.html  audio__buffer_8hpp.js  audio__buffer_8hpp_source.html  audio__config__view_8hpp.html  audio__config__view_8hpp.js  audio__config__view_8hpp_source.html  audio__device__manager_8cpp.html  audio__device__manager_8hpp.html  audio__device__manager_8hpp.js  audio__device__manager_8hpp_source.html  audio__engine_8cpp.html  audio__engine_8hpp.html  audio__engine_8hpp.js  audio__engine_8hpp_source.html  audio__module_8hpp.html  audio__module_8hpp.js  audio__module_8hpp_source.html  audio__node_8hpp.html  audio__node_8hpp.js  audio__node_8hpp_source.html  audio__processor_8cpp.html  audio__processor_8hpp.html  audio__processor_8hpp.js  audio__processor_8hpp_source.html  (+578 more)
docs/doxygen/latex/: FULL_REPORT.aux  FULL_REPORT.idx  FULL_REPORT.out  FULL_REPORT.tex  analog__base_8hpp.tex  analog__base_8hpp_source.tex  analog__suite_8hpp.tex  analog__suite_8hpp_source.tex  annotated.tex  application__base_8cpp.tex  application__base_8hpp.tex  application__base_8hpp_source.tex  asset__manager_8cpp.tex  asset__manager_8hpp.tex  asset__manager_8hpp_source.tex  audio__buffer_8hpp.tex  audio__buffer_8hpp_source.tex  audio__config__view_8hpp.tex  audio__config__view_8hpp_source.tex  audio__device__manager_8cpp.tex  audio__device__manager_8hpp.tex  audio__device__manager_8hpp_source.tex  audio__engine_8cpp.tex  audio__engine_8hpp.tex  audio__engine_8hpp_source.tex  audio__module_8hpp.tex  audio__module_8hpp_source.tex  audio__node_8hpp.tex  audio__node_8hpp_source.tex  audio__processor_8cpp.tex  audio__processor_8hpp.tex  audio__processor_8hpp_source.tex  audio__processor__value__tree__state_8cpp.tex  audio__processor__value__tree__state_8hpp.tex  audio__processor__value__tree__state_8hpp_source.tex  (+231 more)
docs/proposals/: ANALOG_FLUX_EXPANSION.md  FLUX_ROADMAP.md  FX_VISUALS_AND_PERSISTENCE.md  Proposal_v3.md
scripts/: visualize_audio.py
src/: main.cpp
src/application/: application_base.cpp  application_base.hpp
src/core/: beam_host.cpp  beam_host.hpp  flux_project.hpp  parameter.hpp  project_manager.hpp
src/dsp/: audio_engine.cpp  audio_engine.hpp  audio_node.hpp  biquad_filter_node.hpp  custom_filter.hpp  delay_node.hpp  disk_streamer.cpp  disk_streamer.hpp  flux_fx_nodes.hpp  flux_graph.hpp  flux_node.hpp  flux_plugin.hpp  flux_track_node.hpp  gain_node.hpp  master_node.hpp  render_plan.hpp  sine_oscillator.hpp  track_node.hpp  wav_reader.hpp  wav_writer.hpp
src/engine/: analog_base.hpp  analog_suite.hpp  audio_buffer.hpp  audio_device_manager.cpp  audio_device_manager.hpp  audio_engine.cpp  audio_engine.hpp  audio_node.hpp  audio_processor.cpp  audio_processor.hpp  audio_processor_value_tree_state.cpp  audio_processor_value_tree_state.hpp  audio_reader.hpp  biquad_filter_node.hpp  custom_filter.hpp  delay_node.hpp  disk_streamer.cpp  disk_streamer.hpp  dsp_utils.hpp  flux_fx_nodes.hpp  flux_graph.hpp  flux_node.hpp  flux_node_audio_processor_wrapper.hpp  flux_plugin.hpp  flux_script.hpp  flux_script_node.hpp  flux_track_node.hpp  input_node.hpp  master_node.hpp  midi_event.hpp  offline_renderer.hpp  render_plan.hpp  simd_utils.hpp  simple_gain_processor.cpp  simple_gain_processor.hpp  sine_synth_node.hpp  track_node.hpp  tube_compressor_node.hpp  wav_reader.hpp  wav_writer.hpp
src/graphics/: quad_batcher.cpp  quad_batcher.hpp  shader.cpp  shader.hpp  ui_shaders.hpp
src/interface/: audio_config_view.hpp  audio_module.hpp  button.cpp  button.hpp  cable.hpp  component.hpp  dynamics_module.hpp  filter_graph.hpp  filter_module.hpp  gui_component.cpp  gui_component.hpp  input_handler.cpp  input_handler.hpp  knob.hpp  master_strip.hpp  meter.hpp  port.hpp  sidebar.hpp  slider.cpp  slider.hpp  slider_modular.hpp  spectrum_module.hpp  tape_reel.hpp  timeline.hpp  top_bar.hpp  tube_compressor_ui.hpp  vu_meter.hpp  workspace.hpp
src/render/: quad_batcher.cpp  quad_batcher.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  ui_shaders.hpp
src/session/: asset_manager.cpp  asset_manager.hpp  automation.hpp  beam_host.cpp  beam_host.hpp  flux_project.hpp  parameter.hpp  project_manager.hpp  region.hpp
src/ui/: audio_module.hpp  cable.hpp  component.hpp  input_handler.cpp  input_handler.hpp  knob.hpp  master_strip.hpp  port.hpp  sidebar.hpp  tape_reel.hpp  timeline.hpp  top_bar.hpp  vu_meter.hpp  workspace.hpp
src/utilities/: flux_audio_utils.hpp  third_party_impl.cpp
tests/: test_audio_engine.cpp  test_complex_dsp.cpp  test_integration.cpp  test_juce_like_api.cpp  test_persistence.cpp  test_ui.cpp
(+124 files in other folders)
